--- a/FastTickets/FastTickets/Views/Evento/Index.cshtml
+++ b/FastTickets/FastTickets/Views/Evento/Index.cshtml
@@ -44,7 +44,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Voltar a Home", "Index", "")
 </div>
 
 @section Scripts {
