--- a/FastTickets/FastTickets/Content/bootstrap.css
+++ b/FastTickets/FastTickets/Content/bootstrap.css
@@ -238,11 +238,10 @@ th {
   h3 {
     page-break-after: avoid;
   }
-  .fundo-navbar {
-    display: none;
+ /* .navbar {
     background-color: lightcoral;
-    font-size: 18px;
-  }
+    font-size: 60px;
+  }*/
   .btn > .caret,
   .dropup > .btn > .caret {
     border-top-color: #000 !important;
@@ -4166,9 +4165,11 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   border-top-right-radius: 0;
 }
 .navbar {
+  background-color:lightblue;
   position: relative;
   min-height: 50px;
   margin-bottom: 20px;
+  
   border: 1px solid transparent;
 }
 @media (min-width: 768px) {
@@ -4591,7 +4592,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
   color: #ccc;
 }
 .navbar-inverse {
-  background-color: #222;
+  background-color: lightcoral;
   border-color: #080808;
 }
 .navbar-inverse .navbar-brand {
