--- a/FastTickets/FastTickets/Views/Shared/_Topo.cshtml
+++ b/FastTickets/FastTickets/Views/Shared/_Topo.cshtml
@@ -1,15 +1,16 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <link href="~/Content/bootstrap.css" rel="stylesheet" />
-</head>
-<body>
-    <nav class="fundo-navbar">
+
+
+    <nav class=" navbar">
         <div class="container">
-            @Html.ActionLink("Home","Index","")
+            @Html.ActionLink("Home", "Index", "")
+            |
             @Html.ActionLink("Cadastrar Evento", "Index", "Evento")
+            |
             @Html.ActionLink("Cadastrar Local", "Index", "Local")
         </div>
     </nav>
-</body>
+</head>
 </html>
