--- a/FastTickets/FastTickets/Views/Shared/_Layout.cshtml
+++ b/FastTickets/FastTickets/Views/Shared/_Layout.cshtml
@@ -3,9 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link href="~/Content/bootstrap.css" rel="stylesheet" />
+    <link href="@Url.Content("~/Content/bootstrap.css")" rel="stylesheet">
+
     <title>@ViewBag.Title</title>
-    @Styles.Render("~/Content/css")
+
+
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
