Lista de Locais
dropdown com a lista de locais cadastrados

--- a/FastTickets/FastTickets/Content/bootstrap.css
+++ b/FastTickets/FastTickets/Content/bootstrap.css
@@ -238,11 +238,11 @@ th {
   h3 {
     page-break-after: avoid;
   }
-  .fundo-navbar {
+  /*.navbar {
     display: none;
     background-color: lightcoral;
     font-size: 18px;
-  }
+  }*/
   .btn > .caret,
   .dropup > .btn > .caret {
     border-top-color: #000 !important;
@@ -4169,6 +4169,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   position: relative;
   min-height: 50px;
   margin-bottom: 20px;
+  background-color: lightcoral;
   border: 1px solid transparent;
 }
 @media (min-width: 768px) {
