--- a/FastTickets/FastTickets/Views/Evento/Index.cshtml
+++ b/FastTickets/FastTickets/Views/Evento/Index.cshtml
@@ -26,13 +26,8 @@
             @Html.ValidationMessageFor(model => model.DataEvento)
         </div>
 
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Promoter.Nome)
-        </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Promoter.Nome)
-            @Html.ValidationMessageFor(model => model.Promoter.Nome)
+            @Html.DropDownList("Locais", null, htmlAttributes: new { @class = "form-control" })
         </div>
 
        
