--- a/FastTickets/FastTickets/Views/Shared/_Topo.cshtml
+++ b/FastTickets/FastTickets/Views/Shared/_Topo.cshtml
@@ -4,7 +4,7 @@
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
 </head>
 <body>
-    <nav class="fundo-navbar">
+    <nav class="navbar">
         <div class="container">
             @Html.ActionLink("Home","Index","")
             @Html.ActionLink("Cadastrar Evento", "Index", "Evento")
