--- a/FastTickets/FastTickets/Views/Evento/Index.cshtml
+++ b/FastTickets/FastTickets/Views/Evento/Index.cshtml
@@ -27,7 +27,10 @@
         </div>
 
         <div class="editor-field">
-            @Html.DropDownList("Locais", null, htmlAttributes: new { @class = "form-control" })
+            Nome do Evento
+        </div>
+        <div class="editor-field">
+            @Html.DropDownList("LocalId", null, htmlAttributes: new { @class = "form-control" })
         </div>
 
        
