ActionLink para tela de cadastro de Local
Link para cadastrar um local

--- a/FastTickets/FastTickets/Views/Evento/Index.cshtml
+++ b/FastTickets/FastTickets/Views/Evento/Index.cshtml
@@ -31,6 +31,7 @@
         </div>
         <div class="editor-field">
             @Html.DropDownList("LocalId", null, htmlAttributes: new { @class = "form-control" })
+            @Html.ActionLink("Cadastrar Local", "Index", "LocalEvento")
         </div>
 
        
