--- a/FastTickets/FastTickets/Views/Shared/_Layout.cshtml
+++ b/FastTickets/FastTickets/Views/Shared/_Layout.cshtml
@@ -22,5 +22,11 @@
 
     @Scripts.Render("~/bundles/jquery")
     @RenderSection("scripts", required: false)
+
+     <div>
+
+        @RenderPage("~/Views/Shared/_Rodape.cshtml")
+
+    </div>
 </body>
 </html>
