--- a/FastTickets/FastTickets/Views/Home/Index.cshtml
+++ b/FastTickets/FastTickets/Views/Home/Index.cshtml
@@ -18,10 +18,10 @@
            @foreach (var evento in Model){
             <tr>
                     <td>
-                        @evento.NomeEvento
+                        @evento.Nome
                     </td>
                      <td>
-                        @evento.DataEvento
+                        @evento.Data
                     </td>
                      <td>
                         @evento.EventoId
