--- a/FastTickets/FastTickets/Views/LocalEvento/Index.cshtml
+++ b/FastTickets/FastTickets/Views/LocalEvento/Index.cshtml
@@ -38,7 +38,8 @@
        
 
         <p>
-            <input type="submit" value="Cadastrar" />
+            <br />
+            <input type="submit" value="Cadastrar" class="btn"/>
         </p>
     </fieldset>
 }
