Tabela Evento Cadastrados
Tabela sem hora na data, e com nome do local

--- a/FastTickets/FastTickets/Views/Home/Index.cshtml
+++ b/FastTickets/FastTickets/Views/Home/Index.cshtml
@@ -21,10 +21,10 @@
                         @evento.Nome
                     </td>
                      <td>
-                        @evento.Data
+                        @evento.Data.ToShortDateString()
                     </td>
                      <td>
-                        @evento.EventoId
+                        @evento.LocalEvento.Nome
                     </td>
                     
                                         
