--- a/FastTickets/FastTickets/Content/bootstrap.css
+++ b/FastTickets/FastTickets/Content/bootstrap.css
@@ -172,6 +172,11 @@ fieldset {
   margin: 0 2px;
   border: 1px solid #c0c0c0;
 }
+
+.field-validation-error {
+    color: white;
+    font-style: oblique;
+}
 legend {
   padding: 0;
   border: 0;
