--- a/FastTickets/FastTickets/Views/Home/Editar.cshtml
+++ b/FastTickets/FastTickets/Views/Home/Editar.cshtml
@@ -5,49 +5,50 @@
 }
 
 <h2>Editar</h2>
+<div class="container">
+    @using (Html.BeginForm())
+    {
+        @Html.ValidationSummary(true)
 
-@using (Html.BeginForm()) {
-    @Html.ValidationSummary(true)
+        <fieldset>
+            <legend>CadastroEventoModel</legend>
 
-    <fieldset>
-        <legend>CadastroEventoModel</legend>
+            @Html.HiddenFor(model => model.EventoId)
 
-        @Html.HiddenFor(model => model.EventoId)
+            <div class="editor-label">
+                @Html.LabelFor(model => model.Nome)
+            </div>
+            <div class="editor-field">
+                @Html.EditorFor(model => model.Nome)
+                @Html.ValidationMessageFor(model => model.Nome)
+            </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Nome)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Nome)
-            @Html.ValidationMessageFor(model => model.Nome)
-        </div>
+            <div class="editor-label">
+                @Html.LabelFor(model => model.Data)
+            </div>
+            <div class="editor-field">
+                @Html.EditorFor(model => model.Data)
+                @Html.ValidationMessageFor(model => model.Data)
+            </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Data)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Data)
-            @Html.ValidationMessageFor(model => model.Data)
-        </div>
+            <div class="editor-label">
+                @Html.LabelFor(model => model.LocalId)
+            </div>
+            <div class="editor-field">
+                @Html.EditorFor(model => model.LocalId)
+                @Html.ValidationMessageFor(model => model.LocalId)
+            </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.LocalId)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.LocalId)
-            @Html.ValidationMessageFor(model => model.LocalId)
-        </div>
+            <p>
+                <input type="submit" value="Save" />
+            </p>
+        </fieldset>
+    }
 
-        <p>
-            <input type="submit" value="Save" />
-        </p>
-    </fieldset>
-}
-
-<div>
-    @Html.ActionLink("Voltar a Home", "Index")
+    <div>
+        @Html.ActionLink("Voltar a Home", "Index")
+    </div>
 </div>
-
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
