--- a/FastTickets/FastTickets/Views/LocalEvento/Index.cshtml
+++ b/FastTickets/FastTickets/Views/LocalEvento/Index.cshtml
@@ -4,50 +4,52 @@
     ViewBag.Title = "Index";
 }
 
-@using (Html.BeginForm()) {
-    @Html.ValidationSummary(true)
+<div class="container">
+    @using (Html.BeginForm())
+    {
+        @Html.ValidationSummary(true)
 
-    <fieldset>
-        <legend>Cadastro de Local do Evento</legend>
+        <fieldset>
+            <legend>Cadastro de Local do Evento</legend>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Nome)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Nome)
-            @Html.ValidationMessageFor(model => model.Nome)
-        </div>
+            <div class="editor-label">
+                @Html.LabelFor(model => model.Nome)
+            </div>
+            <div class="editor-field">
+                @Html.EditorFor(model => model.Nome)
+                @Html.ValidationMessageFor(model => model.Nome)
+            </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Endereco)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Endereco)
-            @Html.ValidationMessageFor(model => model.Endereco)
-        </div>
+            <div class="editor-label">
+                @Html.LabelFor(model => model.Endereco)
+            </div>
+            <div class="editor-field">
+                @Html.EditorFor(model => model.Endereco)
+                @Html.ValidationMessageFor(model => model.Endereco)
+            </div>
 
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Capacidade)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Capacidade)
-            @Html.ValidationMessageFor(model => model.Capacidade)
-        </div>
+            <div class="editor-label">
+                @Html.LabelFor(model => model.Capacidade)
+            </div>
+            <div class="editor-field">
+                @Html.EditorFor(model => model.Capacidade)
+                @Html.ValidationMessageFor(model => model.Capacidade)
+            </div>
 
-       
 
-        <p>
-            <br />
-            <input type="submit" value="Cadastrar" class="btn"/>
-        </p>
-    </fieldset>
-}
 
-<div>
-    @Html.ActionLink("Voltar aos Eventos", "Index", "Evento")
+            <p>
+                <br />
+                <input type="submit" value="Cadastrar" class="btn" />
+            </p>
+        </fieldset>
+    }
+
+    <div>
+        @Html.ActionLink("Voltar aos Eventos", "Index", "Evento")
+    </div>
 </div>
-
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
