Botão Editar e Exlcuir
Links Editar e Excluir em Botões

--- a/FastTickets/FastTickets/Views/Home/Index.cshtml
+++ b/FastTickets/FastTickets/Views/Home/Index.cshtml
@@ -40,8 +40,8 @@
                             @evento.LocalEvento.Nome
                         </td>
                         <td>
-                            @Html.ActionLink("Editar", "Editar", new { id = evento.EventoId })
-                            @Html.ActionLink("Excluir", "Excluir", new { id = evento.EventoId })
+                            @Html.ActionLink("Editar", "Editar", new { id = evento.EventoId }, new { @class="btn" })
+                            @Html.ActionLink("Excluir", "Excluir", new { id = evento.EventoId},new { @class="btn" })
                         </td>
 
 
