--- a/FastTickets/FastTickets/Views/Shared/Error.cshtml
+++ b/FastTickets/FastTickets/Views/Shared/Error.cshtml
@@ -6,11 +6,11 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Error</title>
+    <title>Erro</title>
 </head>
 <body>
     <h2>
-        Sorry, an error occurred while processing your request.
+        Desculpe, ocorreu um erro durante o processamento.
     </h2>
 </body>
 </html>
