Pesquisa, Editar e Repetição no banco
Botão de pesquisa retorna todos os dados se o campo estiver vazio, o botão editar está funcionando e não é mais possível cadastrar eventos e locais já existentes no banco

--- a/FastTickets/FastTickets/Views/Evento/Index.cshtml
+++ b/FastTickets/FastTickets/Views/Evento/Index.cshtml
@@ -43,6 +43,7 @@
             </p>
         </fieldset>
     }
+    @Html.Raw(TempData["msg"])
 
     <div>
         @Html.ActionLink("Voltar a Home", "Index", "")
