--- a/FastTickets/FastTickets/Views/Home/Editar.cshtml
+++ b/FastTickets/FastTickets/Views/Home/Editar.cshtml
@@ -35,13 +35,14 @@
                 @Html.LabelFor(model => model.LocalId)
             </div>
             <div class="editor-field">
-                @Html.EditorFor(model => model.LocalId)
-                @Html.ValidationMessageFor(model => model.LocalId)
+                @Html.DropDownList("LocalId", null, htmlAttributes: new { @class = "form-control" })
+
+
             </div>
 
             <p>
                 <br />
-                <input type="submit" class="btn"value="Alterar" />
+                <input type="submit" class="btn" value="Alterar" />
             </p>
         </fieldset>
     }
