--- a/FastTickets/FastTickets/Views/Home/Editar.cshtml
+++ b/FastTickets/FastTickets/Views/Home/Editar.cshtml
@@ -27,7 +27,7 @@
                 @Html.LabelFor(model => model.Data)
             </div>
             <div class="editor-field">
-                @Html.EditorFor(model => model.Data)
+                @Html.TextBoxFor(model => model.Data )
                 @Html.ValidationMessageFor(model => model.Data)
             </div>
 
