Finalização da Data
Data arrumada

--- a/FastTickets/FastTickets/Content/bootstrap.css
+++ b/FastTickets/FastTickets/Content/bootstrap.css
@@ -17,6 +17,12 @@ body {
   background-attachment: fixed;
   background-size: cover;
 }
+
+.Data {
+    border: none;
+    background: #004d99;
+    text-align: center;
+}
 article,
 aside,
 details,
