--- a/FastTickets/FastTickets/Views/Home/Index.cshtml
+++ b/FastTickets/FastTickets/Views/Home/Index.cshtml
@@ -34,7 +34,7 @@
                             @evento.Nome
                         </td>
                         <td>
-                            @evento.Data
+                            @evento.Data.ToShortDateString()
                         </td>
                         <td>
                             @evento.LocalEvento.Nome
