--- a/FastTickets/FastTickets/Views/Home/Excluir.cshtml
+++ b/FastTickets/FastTickets/Views/Home/Excluir.cshtml
@@ -18,7 +18,7 @@
             </dd>
             <dt>@Html.DisplayNameFor(model => model.Data)
             </dt>
-            <dd>@Html.TextBoxFor(model => model.Data, "{0:dd MM yyyy}", new { @class = "text-box"} )
+            <dd>@Html.TextBoxFor(model => model.Data, "{0:dd/MM/yyyy}", new { @Class = "Data" })
             </dd>
             <dt>@Html.DisplayNameFor(model => model.LocalEvento.Nome)
             </dt>
